updated the auto super admin
