# server/mocks/swagger-output.json
@@ -7,7 +7,9 @@
   },
   "host": "localhost:2025",
   "basePath": "/api/v1/admin",
-  "schemes": ["http"],
+  "schemes": [
+    "http"
+  ],
   "securityDefinitions": {
     "Bearer": {
       "type": "apiKey",
@@ -16,16 +18,13 @@
       "description": "Enter your bearer token in the format **Bearer <token>**"
     }
   },
-  "security": [
-    {
-      "Bearer": []
-    }
-  ],
   "paths": {
     "/gpt/generate": {
       "post": {
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -33,27 +32,29 @@
             "schema": {
               "type": "object",
               "properties": {
-                "isDelete": { "example": "any" },
-                "email": { "example": "any" },
-                "password": { "example": "any" },
-                "firstName": { "example": "any" },
-                "lastName": { "example": "any" },
-                "gender": { "example": "any" },
-                "phone": { "example": "any" },
-                "role": { "example": "any" },
-                "resetPasswordOTP": { "example": "any" }
+                "key": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                }
               }
             }
           }
         ],
-        "responses": { "200": { "description": "OK" } },
-        "tags": ["gpt"]
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     },
     "/gpt/GenerateDescription": {
       "post": {
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -61,59 +62,61 @@
             "schema": {
               "type": "object",
               "properties": {
-                "isDelete": { "example": "any" },
-                "email": { "example": "any" },
-                "password": { "example": "any" },
-                "firstName": { "example": "any" },
-                "lastName": { "example": "any" },
-                "gender": { "example": "any" },
-                "phone": { "example": "any" },
-                "role": { "example": "any" },
-                "resetPasswordOTP": { "example": "any" }
+                "productId": {
+                  "example": "any"
+                },
+                "userKey": {
+                  "example": "any"
+                }
               }
             }
           }
         ],
-        "responses": { "default": { "description": "" } },
-        "tags": ["gpt"]
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
       }
     },
     "/category/create": {
       "post": {
         "description": "",
-        "responses": {
-          "201": { "description": "Created" },
-          "501": { "description": "Not Implemented" }
-        },
-        "tags": ["category"],
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": { "example": "any" },
-                "description": { "example": "any" }
-              }
-            }
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
-        "consumes": ["multipart/form-data"]
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
     "/category/getById/{id}": {
       "get": {
         "description": "",
         "parameters": [
-          { "name": "id", "in": "path", "required": true, "type": "string" }
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
         ],
         "responses": {
-          "201": { "description": "Created" },
-          "500": { "description": "Internal Server Error" },
-          "501": { "description": "Not Implemented" }
-        },
-        "tags": ["category"]
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
     "/category/update/{id}": {
@@ -121,100 +124,123 @@
         "description": "",
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": { "example": "any" },
-                "description": { "example": "any" }
-              }
-            }
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
-          "201": { "description": "Created" },
-          "500": { "description": "Internal Server Error" },
-          "501": { "description": "Not Implemented" }
-        },
-        "tags": ["category"],
-        "consumes": ["multipart/form-data"]
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
     "/category/delete/{id}": {
       "delete": {
         "description": "",
         "parameters": [
-          { "name": "id", "in": "path", "required": true, "type": "string" },
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": { "_id": { "example": "any" } }
-            }
-          }
-        ],
-        "responses": {
-          "201": { "description": "Created" },
-          "500": { "description": "Internal Server Error" },
-          "501": { "description": "Not Implemented" }
-        },
-        "tags": ["category"]
-      }
-    },
-    "/product/create": {
-      "post": {
-        "description": "",
-        "responses": {
-          "201": { "description": "Created" },
-          "501": { "description": "Not Implemented" }
-        },
-        "tags": ["product"],
-        "parameters": [
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "name": { "example": "any" },
-                "categoryId": { "example": "any" },
-                "description": { "example": "any" },
-                "key": { "example": "any" },
-                "userKey": { "example": "any" }
+                "_id": {
+                  "example": "any"
+                }
               }
             }
           }
         ],
-        "consumes": ["multipart/form-data"]
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/product/create": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
     "/product/getById/{id}": {
       "get": {
         "description": "",
         "parameters": [
-          { "name": "id", "in": "path", "required": true, "type": "string" }
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
         ],
         "responses": {
-          "201": { "description": "Created" },
-          "500": { "description": "Internal Server Error" },
-          "501": { "description": "Not Implemented" }
-        },
-        "tags": ["product"]
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
     "/product/getAllByCategoryId/{id}": {
       "get": {
         "description": "",
         "parameters": [
-          { "name": "id", "in": "path", "required": true, "type": "string" }
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
         ],
         "responses": {
-          "201": { "description": "Created" },
-          "501": { "description": "Not Implemented" }
-        },
-        "tags": ["product"]
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
     "/product/update/{id}": {
@@ -222,72 +248,55 @@
         "description": "",
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": { "example": "any" },
-                "categoryId": { "example": "any" },
-                "description": { "example": "any" },
-                "key": { "example": "any" },
-                "userKey": { "example": "any" }
-              }
-            }
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
-          "201": { "description": "Created" },
-          "500": { "description": "Internal Server Error" },
-          "501": { "description": "Not Implemented" }
-        },
-        "tags": ["product"],
-        "consumes": ["multipart/form-data"]
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
     "/product/delete/{id}": {
       "delete": {
         "description": "",
         "parameters": [
-          { "name": "id", "in": "path", "required": true, "type": "string" }
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
         ],
         "responses": {
-          "201": { "description": "Created" },
-          "500": { "description": "Internal Server Error" },
-          "501": { "description": "Not Implemented" }
-        },
-        "tags": ["product"]
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     },
     "/user/register": {
       "post": {
         "description": "",
         "responses": {
-          "200": { "description": "OK" },
-          "500": { "description": "Internal Server Error" }
-        },
-        "tags": ["user"],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "isDelete": { "example": "any" },
-                "email": { "example": "any" },
-                "password": { "example": "any" },
-                "firstName": { "example": "any" },
-                "lastName": { "example": "any" },
-                "gender": { "example": "any" },
-                "phone": { "example": "any" },
-                "role": { "example": "any" },
-                "resetPasswordOTP": { "example": "any" }
-              }
-            }
+          "default": {
+            "description": ""
           }
-        ],
-        "consumes": ["multipart/form-data"]
+        }
       }
     },
     "/user/login": {
@@ -300,27 +309,27 @@
             "schema": {
               "type": "object",
               "properties": {
-                "isDelete": { "example": "any" },
-                "email": { "example": "any" },
-                "password": { "example": "any" },
-                "firstName": { "example": "any" },
-                "lastName": { "example": "any" },
-                "gender": { "example": "any" },
-                "phone": { "example": "any" },
-                "role": { "example": "any" },
-                "resetPasswordOTP": { "example": "any" }
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
               }
             }
           }
         ],
         "responses": {
-          "201": { "description": "Created" },
-          "401": { "description": "Unauthorized" },
-          "500": { "description": "Internal Server Error" }
-        },
-        "tags": ["user"],
-        "consumes": ["multipart/form-data"]
+          "201": {
+            "description": "Created"
+          }
+        }
       }
     }
-  }
+  },
+  "security": [
+    {
+      "Bearer": []
+    }
+  ]
 }
