# server/src/controllers/v1/admin/category/routes.js
@@ -1,12 +1,11 @@
 const router = require('express').Router();
 const upload =require('../../../../middleware/upload')
 const CategoryController=require('./category')
+const authHelper=require("../../../../models/helper/AuthHelper")
 
-router.post('/create',CategoryController.create);
-router.get('/getById/:id',CategoryController.getById);
-router.put('/update/:id',CategoryController.update);
-router.delete('/delete/:id',CategoryController.remove);
-
-
+router.post('/create',authHelper.authenticateJWT(["ADMIN","SUPERADMIN"]),CategoryController.create);
+router.get('/getById/:id',authHelper.authenticateJWT(["ADMIN","SUPERADMIN"]),CategoryController.getById);
+router.put('/update/:id',authHelper.authenticateJWT(["ADMIN","SUPERADMIN"]),CategoryController.update);
+router.delete('/delete/:id',authHelper.authenticateJWT(["ADMIN","SUPERADMIN"]),CategoryController.remove);
 
 module.exports = router
